# dc-bot

./: conv_log  conversation.py  help.py  keep_alive.py  main.py  package-lock.json  picture.py  pyproject.toml  rank.py  readme.md  readme.txt  webserver.py  word_count.db  word_count.py
backup/: keep_alive  main
channelID/: ChannelID.db  DV_ChannelID  DV_ChannelID.txt  T_ChannelID  V_ChannelID  V_ChannelID.txt
