[tool.poetry]
name = "repl_python3_dc-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
selenium = "^4.0.0"
wang-test = "^1.0.0"
replit = "^3.2.4"
googletrans = "^3.1.0a0"
fake-useragent = "^0.1.11"
pixivpy = "^PixivPy-3.6.2-py3-none-any.whl"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
