[tool.poetry]
name = "repl_python3_dc-bot"
version = "0.1.0"
description = ""
authors = ["Evanlau1798 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
googletrans = "^3.1.0a0"
pixivpy = "^3.6.2"
discord = "^1.7.3"
PyNaCl = "^1.4.0"
discord-py-slash-command = "^3.0.3"
youtube_dl = "^2021.12.17"
python-dotenv = "^0.19.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
